--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 			<artifactId>rest-assured</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>s
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>	
 		<dependency>
     		<groupId>junit</groupId>
     		<artifactId>junit</artifactId>
